@@ -131,8 +131,8 @@
     SOGoIMAPServer = "imap://PH_IMAP_SERVER:143/";
 
     // SMTP server
-    SOGoMailingMechanism = smtp;
     SOGoSMTPServer = PH_SMTP_SERVER;
+    SOGoMailingMechanism = smtp;
     //SOGoSMTPAuthenticationType = PLAIN;
 
     // Enable managesieve service
